--- a/chat.html
+++ b/chat.html
@@ -1,36 +1,91 @@
-document.addEventListener('DOMContentLoaded', function() {
-  const chatForm = document.getElementById('chatForm');
-  const chatMessages = document.getElementById('chatMessages');
-  // Simulação: todas as mensagens ficam armazenadas em LocalStorage
-  let messages = JSON.parse(localStorage.getItem('chatMessages')) || [];
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>AnchieTam - Chat</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+  <header>
+    <h1>AnchieTam</h1>
+    <nav>
+      <a href="feed.html">Feed</a>
+      <a href="chat.html">Chat</a>
+      <a href="marketplace.html">Marketplace</a>
+      <a href="#" id="logout">Sair</a>
+    </nav>
+  </header>
+  <main>
+    <section class="chat">
+      <h2>Chats</h2>
+      <div id="chatList">
+        <!-- Lista de chats (pode ser implementada conforme necessário) -->
+      </div>
+      <div class="chat-window">
+        <div id="chatMessages">
+          <!-- Mensagens aparecerão aqui -->
+        </div>
+        <form id="chatForm">
+          <input type="text" id="chatInput" placeholder="Digite sua mensagem...">
+          <button type="submit">Enviar</button>
+        </form>
+      </div>
+    </section>
+  </main>
+  <script src="js/chat.js"></script>
+  <script src="js/auth.js"></script>
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AnchieTam</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <!-- Container principal -->
+    <div class="container">
+        <!-- Página de Início -->
+        <div id="home-page" class="page active">
+            <h1>Bem-vindo ao Início!</h1>
+            <p>Conteúdo da página inicial.</p>
+        </div>
 
-  function displayMessages() {
-    chatMessages.innerHTML = '';
-    messages.forEach(msg => {
-      const msgDiv = document.createElement('div');
-      msgDiv.className = 'chat-message';
-      msgDiv.textContent = `${msg.username}: ${msg.text} (${msg.timestamp})`;
-      chatMessages.appendChild(msgDiv);
-    });
-    chatMessages.scrollTop = chatMessages.scrollHeight;
-  }
-  displayMessages();
+        <!-- Página de Perfil -->
+        <div id="profile-page" class="page">
+            <div class="profile-container">
+                <h2>Meu Perfil</h2>
+                <textarea placeholder="Adicione sua biografia aqui..."></textarea>
+                <button>Salvar Biografia</button>
+            </div>
+        </div>
 
-  if (chatForm) {
-    chatForm.addEventListener('submit', function(e) {
-      e.preventDefault();
-      const chatInput = document.getElementById('chatInput');
-      const text = chatInput.value;
-      const user = JSON.parse(localStorage.getItem('user'));
-      const newMsg = {
-        username: user.username,
-        text,
-        timestamp: new Date().toLocaleTimeString()
-      };
-      messages.push(newMsg);
-      localStorage.setItem('chatMessages', JSON.stringify(messages));
-      displayMessages();
-      chatInput.value = '';
-    });
-  }
-});
+        <!-- Página de Marketplace -->
+        <div id="marketplace-page" class="page">
+            <h1>Marketplace</h1>
+            <p>Conteúdo do Marketplace.</p>
+        </div>
+    </div>
+
+    <!-- Navegação com emojis -->
+    <div class="navbar">
+        <div onclick="switchPage('home-page')">
+            <i class="fas fa-home"></i>
+            <p>Início</p>
+        </div>
+        <div onclick="switchPage('profile-page')">
+            <i class="fas fa-user"></i>
+            <p>Perfil</p>
+        </div>
+        <div onclick="switchPage('marketplace-page')">
+            <i class="fas fa-store"></i>
+            <p>Marketplace</p>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
+</body>
+</html>
